# django_blog

./: .pre-commit-config.yaml  README.md  pyproject.toml
src/apps/blog/: admin.py  forms.py  models.py  urls.py  views.py
src/apps/blog/migrations/: 0001_initial.py  0002_alter_article_thumbnail.py
src/apps/user/: apps.py  forms.py  models.py  urls.py  views.py
src/apps/user/migrations/: 0001_initial.py
src/config/: settings.py  urls.py
src/templates/: base.html  header.html  pagination.html  sidebar.html
src/templates/blog/: articles_create.html  articles_delete.html  articles_detail.html  articles_list.html  articles_update.html
src/templates/includes/: messages.html
src/templates/user/: profile_detail.html  profile_edit.html  user_login.html  user_password_change.html  user_password_reset.html  user_password_set_new.html
src/utils/: mixins.py  slug.py
