[tool.poetry]
name = "django-blog"
version = "0.1.0"
description = "Веб-приложение блог на фреймворке Django"
authors = ["BaronSamedi"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
django = "4.2.8"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6.0"
djlint = "^1.34.1"
ruff = "^0.1.9"

[tool.ruff]
line-length = 120

select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
    "UP", # pyupgrade
]

[tool.djlint]
profile = "django"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
