[tool.poetry]
name = "django-blog"
version = "0.1.0"
description = "Веб-приложение блог на фреймворке Django"
authors = ["BaronSamedi"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
django = "4.2.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
