[tool.poetry]
name = "django-blog"
version = "0.1.0"
description = "Веб-приложение блог на фреймворке Django"
authors = ["BaronSamedi"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "4.2.8"
django-mptt = "^0.16.0"
pillow = "^10.2.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6.0"
ruff = "^0.1.13"

[tool.ruff]
line-length = 120

select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
    "UP", # pyupgrade
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
